--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
 <section class="start-container">
 
     
-  <div id="startImg"><img src="/sourceImages/logo.png">
+  <div id="startImg"><img src="../images/logo.png">
   </div>
 
 
