--- a/start.html
+++ b/start.html
@@ -1,15 +1,17 @@
-<section class="start-container">
+<div class="start-container">
+<section class="start-content">
 
-    
-    <div id="startImg"><img src="/sourceImages/logo.png">
-    </div>
+    <div><img id="startLogo" src="../images/tent.png"></div>
+    <div id="welcomeText">Welcome to</div>
+    <div><img id="startImg" src="../images/logo.png"></div>
 
 
     <section class="acc-btn">
-        <ion-button expand="block" id="login-btn">Login</ion-button>
+        <ion-button expand="block" id="login-btn" color="themewhite"><div class="greentext">Login</div></ion-button>
     </section>
     <section class="acc-btn">
-        <ion-button expand="block" id="signup-btn">Sign Up</ion-button>
+        <div id="signup-btn">New to TentsPlus? Sign up!</div>
     </section>
 
 </section>
+</div>
