--- a/login.html
+++ b/login.html
@@ -16,16 +16,16 @@
 <form>
   <ion-item color="themewhite">
     <ion-label position="floating">Phone number</ion-label>
-    <ion-input type="number" minlength="8" maxlength="8" required></ion-input>
+    <ion-input id="logPhone" type="tel" maxlength="8" required></ion-input>
   </ion-item>
 
   <ion-item color="themewhite">
     <ion-label position="floating">Password</ion-label>
-    <ion-input type="password" required></ion-input>
+    <ion-input id="logPass" type="password" maxlength="21" required></ion-input>
   </ion-item>
 
   <div class="acc-btn">
-  <ion-button id="testBtn" expand="block" color="themetext"><div class="whitetext">Login</div></ion-button>
+  <ion-button id="login-btn" expand="block" color="themetext"><div class="whitetext">Login</div></ion-button>
   </div>
 </form>
 
