--- a/start.html
+++ b/start.html
@@ -7,10 +7,10 @@
 
 
     <section class="acc-btn">
-        <ion-button expand="block" id="login-btn" color="themewhite"><div class="greentext">Login</div></ion-button>
+        <ion-button expand="block" id="gotoLogin" color="themewhite"><div class="greentext">Login</div></ion-button>
     </section>
     <section class="acc-btn">
-        <div id="signup-btn">New to TentsPlus? Sign up!</div>
+        <div id="gotoSignup">New to TentsPlus? Sign up!</div>
     </section>
 
 </section>
