--- a/home.html
+++ b/home.html
@@ -1,12 +1,12 @@
 <ion-menu side="start" content-id="main-content">
     <ion-header>
-        <ion-toolbar>
+        <ion-toolbar color="themetext">
             <ion-grid>
                 <ion-row>
                     <ion-col>
                         </div>
                         <ion-row>
-                            <img id="menuLogo" src="/sourceImages/tent.png" alt="tent logo image">
+                            <img id="menuLogo" src="../images/tent.png" alt="tent logo image">
                             <ion-title class="userName">Davier</ion-title>
                         </ion-row>
                     </ion-col>
