--- a/login.html
+++ b/login.html
@@ -1,6 +1,3 @@
-
-
-
 <ion-toolbar>
   <ion-buttons class="back-btn" slot="start">
     <ion-button color="themetext">
@@ -11,24 +8,28 @@
   <ion-title>Login</ion-title>
 </ion-toolbar>
 
-
 <div class="login-container">
-<form>
-  <ion-item color="themewhite">
-    <ion-label position="floating">Phone number</ion-label>
-    <ion-input id="logPhone" type="tel" maxlength="8" required></ion-input>
-  </ion-item>
+  <form>
+    <ion-item color="themewhite">
+      <ion-label position="floating">Phone number</ion-label>
+      <!--<ion-input id="logPhone" type="tel" maxlength="8" required></ion-input>-->
+      <ion-input id="logPhone" type="text" maxlength="8" required></ion-input>
+    </ion-item>
 
-  <ion-item color="themewhite">
-    <ion-label position="floating">Password</ion-label>
-    <ion-input id="logPass" type="password" maxlength="21" required></ion-input>
-  </ion-item>
+    <ion-item color="themewhite">
+      <ion-label position="floating">Password</ion-label>
+      <ion-input
+        id="logPass"
+        type="password"
+        maxlength="21"
+        required
+      ></ion-input>
+    </ion-item>
 
-  <div class="acc-btn">
-  <ion-button id="login-btn" expand="block" color="themetext"><div class="whitetext">Login</div></ion-button>
-  </div>
-</form>
-
+    <div class="acc-btn">
+      <ion-button id="login-btn" expand="block" color="themetext"
+        ><div class="whitetext">Login</div></ion-button
+      >
+    </div>
+  </form>
 </div>
-
-
