--- a/login.html
+++ b/login.html
@@ -26,7 +26,9 @@
 
   <div class="acc-btn">
   <ion-button id="login-btn" expand="block" color="themetext"><div class="whitetext">Login</div></ion-button>
-  </div>
+  <ion-button id="dummy-btn" expand="block" color="themetext"><div class="whitetext">Login</div></ion-button>
+    
+</div>
 </form>
 
 </div>
