--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,7 @@
 
 <div class="login-container">
 <form>
+  <!--
   <ion-item color="themewhite">
     <ion-label position="floating">First name</ion-label>
     <ion-input id="signFirst" type="text" maxlength="30" required></ion-input>
@@ -36,6 +37,16 @@
     <ion-label position="floating">Confirm password</ion-label>
     <ion-input id="signConPass" type="password" maxlength="21" required></ion-input>
   </ion-item>
+-->
+<ion-item color="themewhite">
+  <ion-label position="floating">name</ion-label>
+  <ion-input id="signName" type="text" maxlength="30" required></ion-input>
+</ion-item>
+
+<ion-item color="themewhite">
+  <ion-label position="floating">address</ion-label>
+  <ion-input id="signAddress" type="text" maxlength="30" required></ion-input>
+</ion-item>
 
   <div class="acc-btn">
   <ion-button id="signup-btn" expand="block" color="themetext"><div class="whitetext">Sign up</div></ion-button>
