--- a/login.html
+++ b/login.html
@@ -28,9 +28,14 @@
     </ion-item>
 
     <div class="acc-btn">
-      <ion-button id="login-btn" expand="block" color="themetext"
-        ><div class="whitetext">Login</div></ion-button
-      >
+      <ion-button id="login-btn" expand="block" color="themetext">
+        <div class="whitetext">Login</div>
+      </ion-button>
+    </div>
+    <div class="acc-btn">
+      <ion-button id="logout-btn" expand="block" color="themetext">
+        <div class="whitetext">Log out</div>
+      </ion-button>
     </div>
   </form>
 </div>
