--- a/tenantInv.html
+++ b/tenantInv.html
@@ -68,16 +68,36 @@
     <!--place in Nav content here-->
 
     <ion-content class="ion-padding">
-                  <table>
-                        <tr><th>Serial</th><th>Donor</th><th>Item</th><th></th></tr>
+                  <table class="infoTable">
+                      <tr>
+                        <th class="infoCell">Serial</th>
+                        <th class="infoCell">Donor</th>
+                        <th class="infoCell">Item</th>
+                        <th class="infoCell"></th>
+                    </tr>
+
                         <tr><td colspan="4"><hr></td></tr>
-                        <tr><td>Item 1</td><td>Item 2</td><td>Item 3</td><td><ion-button class="tenantInvModal-btn" size="small" expand="block">More</ion-button></td></tr>
-                        <tr><td>Item 1</td><td>Item 2</td><td>Item 3</td><td><ion-button size="small" expand="block">More</ion-button></td></tr>
-                        <tr><td>Item 1</td><td>Item 2</td><td>Item 3</td><td><ion-button size="small" expand="block">More</ion-button></td></tr>
-                        <tr><td>Item 1</td><td>Item 2</td><td>Item 3</td><td><ion-button size="small" expand="block">More</ion-button></td></tr>
-                        <tr><td>Item 1</td><td>Item 2</td><td>Item 3</td><td><ion-button size="small" expand="block">More</ion-button></td></tr>
-                        <tr><td>Item 1</td><td>Item 2</td><td>Item 3</td><td><ion-button size="small" expand="block">More</ion-button></td></tr>
-                        <tr><td>Item 1</td><td>Item 2</td><td>Item 3</td><td><ion-button size="small" expand="block">More</ion-button></td></tr>
+
+                        <tr>
+                            
+                            <td class="infoCell">Item 1</td>
+                            <td class="infoCell">Item 2</td>
+                            <td class="infoCell">Item 3</td>
+                            <td class="infoButton">
+                                <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More</ion-button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            
+                            <td class="infoCell">Item 1</td>
+                            <td class="infoCell">Item 2</td>
+                            <td class="infoCell">Item 3</td>
+                            <td class="infoButton">
+                                <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More</ion-button>
+                            </td>
+                        </tr>
+
                     </table>
     </ion-content>
 
