--- a/start.html
+++ b/start.html
@@ -7,7 +7,7 @@
 
 
     <section class="acc-btn">
-        <ion-button expand="block" id="gotoLogin" color="themewhite"><div class="greentext">Login</div></ion-button>
+        <ion-button expand="block" id="dummy-btn" color="themewhite"><div class="greentext">Login</div></ion-button>
     </section>
     <section class="acc-btn">
         <div id="gotoSignup">New to TentsPlus? Sign up!</div>
