--- a/tenantInvExtended.html
+++ b/tenantInvExtended.html
@@ -1,84 +1,48 @@
 <ion-header translucent>
-    <ion-toolbar>
-        <ion-title>Modal Content</ion-title>
-        <ion-buttons slot="end">
-            <ion-button onclick="dismissModal()">Close</ion-button>
-        </ion-buttons>
-    </ion-toolbar>
+  <ion-toolbar>
+    <ion-title>Modal Content</ion-title>
+    <ion-buttons slot="end">
+      <ion-button id="closeModal">Close</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 <ion-content fullscreen>
-    <ion-list>
-        <ion-item>
-            <ion-label>
-                <h2>Serial</h2>
-            </ion-label>
-            <ion-label>
-                <p>0001</p>
-            </ion-label>
-        </ion-item>
-        <ion-item>
-            <ion-label>
-                <h2>Donor</h2>
-            </ion-label>
-            <ion-label>
-                <p>0001</p>
-            </ion-label>
-        </ion-item>
-        <ion-item>
-            <ion-label>
-                <h2>Item</h2>
-            </ion-label>
-            <ion-label>
-                <p>0001</p>
-            </ion-label>
-        </ion-item>
-        <ion-item>
-            <ion-label>
-                <h2>Location</h2>
-            </ion-label>
-            <ion-label>
-                <p>0001</p>
-            </ion-label>
-        </ion-item>
-        <ion-item>
-            <ion-label>
-                <h2>Price</h2>
-            </ion-label>
-            <ion-label>
-                <p>0001</p>
-            </ion-label>
-        </ion-item>
-        <ion-item>
-            <ion-label>
-                <h2>History</h2>
-            </ion-label>
-            <ion-label>
-                <p>0001</p>
-            </ion-label>
-        </ion-item>
-        <ion-item>
-            <ion-label>
-                <h2>Status</h2>
-            </ion-label>
-            <ion-label>
-                <p>0001</p>
-            </ion-label>
-        </ion-item>
-        <ion-item>
-            <ion-label>
-                <h2>Issued</h2>
-            </ion-label>
-            <ion-label>
-                <p>0001</p>
-            </ion-label>
-        </ion-item>
-        <ion-item>
-            <ion-label>
-                <h2>Assign</h2>
-            </ion-label>
-            <ion-label>
-                <p>0001</p>
-            </ion-label>
-        </ion-item>
-    </ion-list>
+  <ion-list>
+    <ion-item>
+      <ion-label><h2>Serial</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>Donor</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>Item</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>Location</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>Price</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>History</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>Status</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>Issued</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>Assign</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
