--- a/start.html
+++ b/start.html
@@ -1,9 +1,9 @@
 <div class="start-container">
 <section class="start-content">
 
-    <div><img id="startLogo" src="../images/tent.png"></div>
+    <div><img id="startLogo" src="images/tent.png"></div>
     <div id="welcomeText">Welcome to</div>
-    <div><img id="startImg" src="../images/logo.png"></div>
+    <div><img id="startImg" src="images/logo.png"></div>
 
 
     <section class="acc-btn">
