--- a/start.html
+++ b/start.html
@@ -1,13 +1,13 @@
 <div class="start-container">
 <section class="start-content">
 
-    <div><img id="startLogo" src="../images/tent.png"></div>
+    <div><img id="startLogo" src="images/tent.png"></div>
     <div id="welcomeText">Welcome to</div>
-    <div><img id="startImg" src="../images/logo.png"></div>
+    <div><img id="startImg" src="images/logo.png"></div>
 
 
     <section class="acc-btn">
-        <ion-button expand="block" id="dummy-btn" color="themewhite"><div class="greentext">Login</div></ion-button>
+        <ion-button expand="block" id="gotoLogin" color="themewhite"><div class="greentext">Login</div></ion-button>
     </section>
     <section class="acc-btn">
         <div id="gotoSignup">New to TentsPlus? Sign up!</div>
