--- a/tenantProf.html
+++ b/tenantProf.html
@@ -6,7 +6,7 @@
                     <ion-col>
                         </div>
                         <ion-row>
-                            <img id="menuLogo" src="../images/tent.png" alt="tent logo image">
+                            <img id="menuLogo" src="images/tent.png" alt="tent logo image">
                             <ion-title class="userName">Davier</ion-title>
                         </ion-row>
                     </ion-col>
@@ -60,6 +60,7 @@
         </ion-toolbar>
     </ion-header>
 
+    <!--
     <ion-item color="themewhite">
         <ion-title size="small">Name:</ion-title>
     </ion-item>
@@ -83,6 +84,18 @@
     </ion-item>
     <ion-item color="themewhite">
         <ion-title size="small">Co-Tenant ID:</ion-title>
+    </ion-item>-->
+
+    <ion-item color="themewhite">
+        <ion-title size="small">Name:</ion-title><div id="tenantName">name here</div>
+    </ion-item>
+
+    <ion-item color="themewhite">
+        <ion-title size="small">Address:</ion-title><div id="tenantAddress">address here</div>
+    </ion-item>
+
+    <ion-item color="themewhite">
+        <ion-title size="small">ID:</ion-title><div id="tenantID">tenant id here</div>
     </ion-item>
 
 
