--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
                     <ion-col>
                         </div>
                         <ion-row>
-                            <img id="menuLogo" src="../images/tent.png" alt="tent logo image">
+                            <img id="menuLogo" src="images/tent.png" alt="tent logo image">
                             <ion-title class="userName">Davier</ion-title>
                         </ion-row>
                     </ion-col>
