--- a/home.html
+++ b/home.html
@@ -4,7 +4,6 @@
             <ion-grid>
                 <ion-row>
                     <ion-col>
-                        </div>
                         <ion-row>
                             <img id="menuLogo" src="./images/tent.png" alt="tent logo image">
                             <ion-title class="userName">Davier</ion-title>
@@ -12,10 +11,72 @@
                     </ion-col>
                 </ion-row>
             </ion-grid>
-
         </ion-toolbar>
     </ion-header>
     <ion-content>
+        <ion-grid>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
+                        <ion-icon name="person-circle" slot="start"></ion-icon>
+                        <ion-title id="tenantProf-btn">Tenant Profile</ion-title>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
+                        <ion-icon name="folder" slot="start"></ion-icon>
+                        <ion-title id="tenantInv-btn">Tenant Inventory</ion-title>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
+                        <ion-icon name="create" slot="start"></ion-icon>
+                        <ion-title id="tenantCons-btn">Consumables</ion-title>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
+                        <ion-icon name="newspaper" slot="start"></ion-icon>
+                        <ion-title id="tenantUti-btn">Utility Bills</ion-title>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
+                        <ion-icon name="card" slot="start"></ion-icon>
+                        <ion-title id="tenantPayment-btn">Payment Modules</ion-title>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-footer>
+                        <ion-toolbar>
+                            <ion-title class="logout-btn">Log Out</ion-title>
+                        </ion-toolbar>
+                    </ion-footer>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+
+        <!--
         <ion-list>
             <ion-item>
                 <ion-icon name="log-in" slot="start"></ion-icon>
@@ -46,6 +107,7 @@
             </ion-footer>
 
         </ion-list>
+        -->
     </ion-content>
 </ion-menu>
 
