--- a/login.html
+++ b/login.html
@@ -33,7 +33,19 @@
       </ion-button>
     </div>
     <div class="acc-btn">
-      <ion-button id="logout-btn" expand="block" color="themetext">
+      <ion-button id="dummy-btn" expand="block" color="themetext">
+        <div class="whitetext">Log in as Case Worker</div>
+      </ion-button>
+    </div>
+    
+    <div class="acc-btn">
+      <ion-button id="dummy2-btn" expand="block" color="themetext">
+        <div class="whitetext">Log in as Donor</div>
+      </ion-button>
+    </div>
+
+    <div class="acc-btn">
+      <ion-button id="logout-btndummy-btn" expand="block" color="themetext">
         <div class="whitetext">Log out</div>
       </ion-button>
     </div>
