--- a/donorProf.html
+++ b/donorProf.html
@@ -35,12 +35,87 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                
+                <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -62,27 +137,55 @@
             <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
             </ion-buttons>
-            <ion-title class="pageTitle" slot="start">Profile</ion-title>
+            <ion-title class="pageTitle" slot="start">Utility Bills</ion-title>
         </ion-toolbar>
     </ion-header>
 
-    <ion-item color="themewhite">
-        <ion-title size="small">Name:</ion-title>
-    </ion-item>
-    <ion-item color="themewhite">
-        <ion-title size="small">ID:</ion-title>
-    </ion-item>
+    <ion-toolbar>
+        <ion-searchbar></ion-searchbar>
 
-
-
+    </ion-toolbar>
 
     <!--place in Nav content here-->
 
     <ion-content class="ion-padding">
-        <div id="div1">
+        <table class="infoTable">
+            <tr>
+                <th class="infoCell">Bill ID</th>
+                <th class="infoCell">Split</th>
+                <th class="infoCell">Comments</th>
+                <th class="infoCell"></th>
+            </tr>
 
+            <tr>
+                <td colspan="4">
+                    <hr>
+                </td>
+            </tr>
 
-        </div>
+            <tr>
+
+                <td class="infoCell">Item 1</td>
+                <td class="infoCell">Item 2</td>
+                <td class="infoCell">Item 3</td>
+                <td class="infoButton">
+                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">Item 1</td>
+                <td class="infoCell">Item 2</td>
+                <td class="infoCell">Item 3</td>
+                <td class="infoButton">
+                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+        </table>
     </ion-content>
 
 </div>
