--- a/tenantInv.html
+++ b/tenantInv.html
@@ -45,7 +45,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="newspaper" slot="start"></ion-icon>
-                        <ion-title id="tenantUti-btn">Utility Bills</ion-title>
+                        <ion-title id="tenantUtility-btn">Utility Bills</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -59,12 +59,62 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-
+                <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -86,7 +136,7 @@
             <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
             </ion-buttons>
-            <ion-title class="pageTitle" slot="start">Inventory Listing</ion-title>
+            <ion-title class="pageTitle" slot="start">Inventory</ion-title>
         </ion-toolbar>
     </ion-header>
 
