--- a/tenantInvExtended.html
+++ b/tenantInvExtended.html
@@ -1,6 +1,8 @@
+<!-- CONS EXT -->
+
 <ion-header translucent>
   <ion-toolbar>
-    <ion-title>Modal Content</ion-title>
+    <ion-title>Consumable Info</ion-title>
     <ion-buttons slot="end">
       <ion-button id="closeModal">Close</ion-button>
     </ion-buttons>
@@ -9,11 +11,7 @@
 <ion-content fullscreen>
   <ion-list>
     <ion-item>
-      <ion-label><h2>Serial</h2></ion-label>
-      <ion-label><p>0001</p></ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label><h2>Donor</h2></ion-label>
+      <ion-label><h2>Tenant ID</h2></ion-label>
       <ion-label><p>0001</p></ion-label>
     </ion-item>
     <ion-item>
@@ -21,27 +19,79 @@
       <ion-label><p>0001</p></ion-label>
     </ion-item>
     <ion-item>
-      <ion-label><h2>Location</h2></ion-label>
+      <ion-label><h2>Fee Imposed</h2></ion-label>
       <ion-label><p>0001</p></ion-label>
     </ion-item>
     <ion-item>
-      <ion-label><h2>Price</h2></ion-label>
+      <ion-label><h2>Comments</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
+
+<!-- UTILITY EXT -->
+<ion-header translucent>
+  <ion-toolbar>
+    <ion-title>Bill Info</ion-title>
+    <ion-buttons slot="end">
+      <ion-button id="closeModal">Close</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+<ion-content fullscreen>
+  <ion-list>
+    <ion-item>
+      <ion-label><h2>SERIAL</h2></ion-label>
       <ion-label><p>0001</p></ion-label>
     </ion-item>
     <ion-item>
-      <ion-label><h2>History</h2></ion-label>
+      <ion-label><h2>SPLIT</h2></ion-label>
       <ion-label><p>0001</p></ion-label>
     </ion-item>
     <ion-item>
-      <ion-label><h2>Status</h2></ion-label>
+      <ion-label><h2>COMMENTS</h2></ion-label>
       <ion-label><p>0001</p></ion-label>
     </ion-item>
     <ion-item>
-      <ion-label><h2>Issued</h2></ion-label>
+      <ion-label><h2>REMINDER</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
+
+<!-- PAYMENT EXT -->
+<ion-header translucent>
+  <ion-toolbar>
+    <ion-title>Payment Info</ion-title>
+    <ion-buttons slot="end">
+      <ion-button id="closeModal">Close</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+<ion-content fullscreen>
+  <ion-list>
+    <ion-item>
+      <ion-label><h2>Tenant ID</h2></ion-label>
       <ion-label><p>0001</p></ion-label>
     </ion-item>
     <ion-item>
-      <ion-label><h2>Assign</h2></ion-label>
+      <ion-label><h2>Amount</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>DEDUCTION</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>CATEGORY</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>CHARGES</h2></ion-label>
+      <ion-label><p>0001</p></ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label><h2>NOTE</h2></ion-label>
       <ion-label><p>0001</p></ion-label>
     </ion-item>
   </ion-list>
