--- a/tenantPayment.html
+++ b/tenantPayment.html
@@ -136,7 +136,7 @@
             <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
             </ion-buttons>
-            <ion-title class="pageTitle" slot="start">Payment Modules</ion-title>
+            <ion-title class="pageTitle" slot="start">Payment</ion-title>
         </ion-toolbar>
     </ion-header>
 
@@ -150,7 +150,7 @@
     <ion-content class="ion-padding">
         <table class="infoTable">
             <tr>
-                <th class="infoCell">Tenant ID</th>
+                <th class="infoCell">Payment ID</th>
                 <th class="infoCell">Amount</th>
                 <th class="infoCell">Deduction</th>
                 <th class="infoCell"></th>
@@ -164,11 +164,11 @@
 
             <tr>
 
-                <td class="infoCell">Item 1</td>
-                <td class="infoCell">Item 2</td>
-                <td class="infoCell">Item 3</td>
+                <td class="infoCell">9735</td>
+                <td class="infoCell">$20.00</td>
+                <td class="infoCell">-$5.00</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -179,7 +179,7 @@
                 <td class="infoCell">Item 2</td>
                 <td class="infoCell">Item 3</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
