--- a/tenantProf.html
+++ b/tenantProf.html
@@ -167,18 +167,22 @@
     </ion-item>-->
 
     <ion-item color="themewhite">
-        <ion-title size="small">Name:</ion-title><div id="tenantName">name here</div>
+        <ion-title size="small">Name:</ion-title><div id="cwName">case worker name here</div>
     </ion-item>
 
-    <ion-item color="themewhite">
+    <!--<ion-item color="themewhite">
         <ion-title size="small">Address:</ion-title><div id="tenantAddress">address here</div>
-    </ion-item>
+    </ion-item>-->
 
     <ion-item color="themewhite">
-        <ion-title size="small">ID:</ion-title><div id="tenantID">tenant id here</div>
+        <ion-title size="small">ID:</ion-title><div id="cwID">case worker id here</div>
     </ion-item>
 
-
+    <div class="acc-btn">
+        <ion-button id="change-pw" expand="block" color="themetext">
+          <div class="whitetext">Change password</div>
+        </ion-button>
+      </div>
 
 
 
