--- a/tenantUtility.html
+++ b/tenantUtility.html
@@ -152,7 +152,6 @@
             <tr>
                 <th class="infoCell">Bill ID</th>
                 <th class="infoCell">Split</th>
-                <th class="infoCell">Comments</th>
                 <th class="infoCell"></th>
             </tr>
 
@@ -164,25 +163,25 @@
 
             <tr>
 
-                <td class="infoCell">Item 1</td>
-                <td class="infoCell">Item 2</td>
-                <td class="infoCell">Item 3</td>
+                <td class="infoCell">1507</td>
+                <td class="infoCell">2</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
+                
             </tr>
 
             <tr>
 
-                <td class="infoCell">Item 1</td>
-                <td class="infoCell">Item 2</td>
-                <td class="infoCell">Item 3</td>
+                <td class="infoCell">0168</td>
+                <td class="infoCell">1</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
+
 
         </table>
     </ion-content>
