--- a/donorProf.html
+++ b/donorProf.html
@@ -21,7 +21,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="person-circle" slot="start"></ion-icon>
-                        <ion-title id="donorProf-btn">Donor Profile</ion-title>
+                        <ion-title id="donorProf-btn">Profile</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
