--- a/tenantCons.html
+++ b/tenantCons.html
@@ -150,9 +150,8 @@
     <ion-content class="ion-padding">
         <table class="infoTable">
             <tr>
-                <th class="infoCell">Tenant ID</th>
-                <th class="infoCell">Name</th>
-                <th class="infoCell">Label</th>
+                <th class="infoCell">Item</th>
+                <th class="infoCell">Fees</th>
                 <th class="infoCell"></th>
             </tr>
 
@@ -163,12 +162,10 @@
             </tr>
 
             <tr>
-
-                <td class="infoCell">Item 1</td>
-                <td class="infoCell">Item 2</td>
-                <td class="infoCell">Item 3</td>
+                <td class="infoCell">Evian</td>
+                <td class="infoCell">$1.60</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -177,9 +174,8 @@
 
                 <td class="infoCell">Item 1</td>
                 <td class="infoCell">Item 2</td>
-                <td class="infoCell">Item 3</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
