--- a/donorModule.html
+++ b/donorModule.html
@@ -108,16 +108,7 @@
                 <br>
                 </ion-col>
             </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
+            
             <ion-row>
                 <ion-col>
                     <ion-footer>
@@ -148,10 +139,43 @@
     <!--place in Nav content here-->
 
     <ion-content class="ion-padding">
-        <div id="div1">
+        <table class="infoTable">
+            <tr>
+                <th class="infoCell">Bill ID</th>
+                <th class="infoCell">Split</th>
+                <th class="infoCell">Comments</th>
+                <th class="infoCell"></th>
+            </tr>
 
+            <tr>
+                <td colspan="4">
+                    <hr>
+                </td>
+            </tr>
 
-        </div>
+            <tr>
+
+                <td class="infoCell">Item 1</td>
+                <td class="infoCell">Item 2</td>
+                <td class="infoCell">Item 3</td>
+                <td class="infoButton">
+                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">Item 1</td>
+                <td class="infoCell">Item 2</td>
+                <td class="infoCell">Item 3</td>
+                <td class="infoButton">
+                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+        </table>
     </ion-content>
 
 </div>
